samples/_failures_safe/1761391277_fbb7fc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90f3ac7e.c: In function ‘main’:
./samples/SAFE/__tmp_90f3ac7e.c:177:5: error: expected expression at end of input
  177 |     if (
      |     ^~
./samples/SAFE/__tmp_90f3ac7e.c:177:5: error: expected declaration or statement at end of input
